public/css/style.css
/* ... */
/* =======================================================
*
* 	Event Page Style 
*
* ======================================================= */

.editevent-cont{
  display: flex;
  justify-content: space-between;
  padding: 15px 2%;

}

.edit-event{
  border: 1px solid rgb(177, 162, 60);
  border-radius: 15px;
  background-color: rgb(225, 99, 75);
  padding: 15px 2%;
  width: 45%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  box-shadow: 0px 14px 30px -15px rgba(0, 0, 0, 0.75);

}

.del-edit-event{
  display: flex;
  margin-top: 15px;
}

.event-info{
  color: white;
  display: flex;
  flex-direction: column;
  width: 54%;
}

.event-info h2{
  color: white;
}

.edit-cont{
  width: 85%;
}

.edit-cont h4{
  text-align: center;
}

.volunteers-signed{
  border: 1px solid rgb(177, 162, 60);
  border-radius: 15px;
  background-color: rgb(225, 99, 75);
  padding: 15px 10%;
  color:white;
  margin-bottom: 15px;
  box-shadow: 0px 14px 30px -15px rgba(0, 0, 0, 0.75);


}

.volunteers-signed h4{
  color: white;
  font-size: 2.2rem;
  font-weight: 600;
  margin-bottom: 15px;
}

/* =======================================================
*
* 	NH Event Page Styling
*
* ======================================================= */

.nh-holder{
  width: 50%;
}

.nh-event{
  color:white;
}

.nh-event p{
  margin-bottom: 5px;
}

.nh-events{
  width: 90%;
  text-align: center;
 margin-top: 15px;
 display: flex;
 flex-direction: column;
 justify-content: center;

} 

.nh-event-sm-cont{
width: 50%;
margin-top: 15px;
display: flex;
justify-content: center;
align-items: center;
}

.rtnbtn{
  display: flex;
  justify-content: center;
  align-items: center;
}

.nh-eventbtn{
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  margin-top:10px;
}

.nh-page{
  display: flex;
}

.nh-events-cont{
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
.nh-events ul{
  list-style-type: none;
  padding: 0;
  text-align: center;
  max-height: 700px;
  overflow: auto;
}

.nh-events li{
  border: 1px solid rgb(177, 162, 60);
  border-radius: 15px;
  background-color: rgb(225, 99, 75);
  width: 90%;
  padding: 15px 3%;
  margin: 15px 0%;
}

/* =======================================================
*
* 	NH Event Page Styling
*
* ======================================================= */

.vnh-create{
  border: 1px solid rgb(177, 162, 60);
  border-radius: 15px;
  background-color: rgb(225, 99, 75);
  width: 90%;
  padding: 20px 3%;
}

.cp-head{
  margin-bottom: 2em;
}
.cp-cont{
  display: flex;
  justify-content: center;
  align-items: center;
}

/* =======================================================
*
* 	Template Style 
*
* ======================================================= */
body {
  font-family: "Inconsolata", Arial, sans-serif;
  font-weight: 400;
  font-size: 18px;
  line-height: 1.7;
  color: #333333;
  background: #fff;
}

.spacing {
  margin-top: 8%;
}

#page {
  position: relative;
  overflow-x: hidden;
  width: 100%;
  height: 100%;
  -webkit-transition: 0.5s;
  -o-transition: 0.5s;
  transition: 0.5s;
}

.offcanvas #page {
  overflow: hidden;
  position: absolute;
}

.offcanvas #page:after {
  -webkit-transition: 2s;
  -o-transition: 2s;
  transition: 2s;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 101;
  background: rgba(0, 0, 0, 0.7);
  content: "";
}

a {
  color: #DD356E;
  -webkit-transition: 0.5s;
  -o-transition: 0.5s;
  transition: 0.5s;
}

a:hover,
a:active,
a:focus {
  color: #DD356E;
  outline: none;
  text-decoration: none;
}

p {
  margin-bottom: 30px;
}

h1,
h2,
h3,
h4,
h5,
h6,
figure {
  color: #000;
  font-family: "Inconsolata", Arial, sans-serif;
  font-weight: 400;
  margin: 0 0 20px 0;
}

::-webkit-selection {
  color: #fff;
  background: #DD356E;
}

::-moz-selection {
  color: #fff;
  background: #DD356E;
}

::selection {
  color: #fff;
  background: #DD356E;
}

.fh5co-nav {
  background: #fff;
}

.fh5co-nav .top-menu {
  padding: 28px 0;
}

.fh5co-nav #fh5co-logo {
  font-size: 32px;
  margin: 0;
  padding: 0;
  text-transform: uppercase;
  font-weight: 700;
  font-family: "Inconsolata", Arial, sans-serif;
}

.fh5co-nav #fh5co-logo a span {
  color: #DD356E;
}

.fh5co-nav a {
  padding: 5px 10px;
  color: #000;
}

@media screen and (max-width: 768px) {
  .fh5co-nav .menu-1 {
    display: none;
  }
}

.fh5co-nav ul {
  padding: 0;
  margin: 5px 0 0 0;
}

.fh5co-nav ul li {
  padding: 0;
  margin: 0;
  list-style: none;
  display: inline;
}

.fh5co-nav ul li a {
  font-size: 18px;
  padding: 30px 15px;
  color: rgba(0, 0, 0, 0.7);
  -webkit-transition: 0.5s;
  -o-transition: 0.5s;
  transition: 0.5s;
}

.fh5co-nav ul li a:hover,
.fh5co-nav ul li a:focus,
.fh5co-nav ul li a:active {
  color: black;
}

.fh5co-nav ul li.has-dropdown {
  position: relative;
}

.fh5co-nav ul li.has-dropdown .dropdown {
  width: 140px;
  -webkit-box-shadow: 0px 14px 33px -9px rgba(0, 0, 0, 0.75);
  -moz-box-shadow: 0px 14px 33px -9px rgba(0, 0, 0, 0.75);
  box-shadow: 0px 14px 33px -9px rgba(0, 0, 0, 0.75);
  z-index: 1002;
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: 40px;
  left: 0;
  text-align: left;
  background: #000;
  padding: 20px;
  -webkit-border-radius: 4px;
  -moz-border-radius: 4px;
  -ms-border-radius: 4px;
  border-radius: 4px;
  -webkit-transition: 0s;
  -o-transition: 0s;
  transition: 0s;
}

.fh5co-nav ul li.has-dropdown .dropdown:before {
  bottom: 100%;
  left: 40px;
  border: solid transparent;
  content: " ";
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
  border-bottom-color: #000;
  border-width: 8px;
  margin-left: -8px;
}

.fh5co-nav ul li.has-dropdown .dropdown li {
  display: block;
  margin-bottom: 7px;
}

.fh5co-nav ul li.has-dropdown .dropdown li:last-child {
  margin-bottom: 0;
}
/* ... */

